# just-for-fun

./: .gitignore  README.md
TDD-Game-of-Life/: CMakeLists.txt
TDD-Game-of-Life/src/: Cell.hpp  Controller.cpp  Controller.hpp  Game.cpp  Game.hpp  Parser.cpp  Parser.hpp  View.cpp  View.hpp  main.cpp
TDD-Game-of-Life/test/: CMakeLists.txt  test_Controller.cpp  test_Game.cpp  test_Parser.cpp  test_View.cpp
drawings-similarity/: Controller.cpp  Controller.h  DrawTreeWindow.cpp  DrawTreeWindow.h  DrawTreeWindow.ui  DrawingPlace.cpp  DrawingPlace.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  contour.h  drawings-similarity.pro  main.cpp  node.h  tree.h
perceptron/: CMakeLists.txt  ILinearClassificationLearner.h  LearnPerceptron.cpp  LearnPerceptron.h  Parser.cpp  Parser.h  Perceptron.cpp  Perceptron.h  Visualizer.cpp  Visualizer.h  data04.csv  main.cpp
radial-basis-function-network/: CMakeLists.txt  Creator.cpp  Creator.hpp  Data.cpp  Data.h  Data.hxx  DataPoint.h  DataPoint.hxx  IСlustering.h  KMeansClustering.cpp  KMeansClustering.h  KMeansClustering.hxx  Net.hpp  NetBuilder.hpp  Neuron.cpp  Neuron.h  NeuronBuilder.cpp  NeuronBuilder.hpp  Parser.h  Parser.hxx  Point.cpp  Point.h  RBFNet.cpp  RBFNet.h  RBFNet.hxx  RBFNetBuilder.cpp  RBFNetBuilder.h  RBFNetCreator.h  RBFNetCreator.hxx  main.cpp  mltMath.cpp  mltMath.h  testData.csv
